--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="logo-nav">
 
                     <div class="logo">
-                        <img src="Assets/logo-gibbon.png" alt="logo-gibbon">
+                        <img src="assets/logo-gibbon.png" alt="logo-gibbon">
                     </div>
 
                     <nav>
@@ -107,7 +107,7 @@
             </nav>
 
             <div class="header-banner">
-                <img src="Assets/banner1.png" alt="">
+                <img src="assets/banner1.png" alt="">
             </div>
         </header>
 
@@ -187,7 +187,7 @@
         </section>
 
         <!-- <section class="products">
-            <img src="Assets/white-series-logo.png" alt="" class="white-series">
+            <img src="assets/white-series-logo.png" alt="" class="white-series">
             <div class="container">
                 <h1>Best Selling Products</h1>
                 <div class="product-list">
@@ -196,7 +196,7 @@
                             <a href="">
                                 <div class="product-item">
                                     <div class="prod-img">
-                                        <img src="Assets/1_whey_chocolate.png" alt="">
+                                        <img src="assets/1_whey_chocolate.png" alt="">
                                     </div>
                                     <div class="prod-name">
                                         The Whey
@@ -214,7 +214,7 @@
                             <a href="">
                                 <div class="product-item">
                                     <div class="prod-img">
-                                        <img src="Assets/1_mass gainer_chocolate.png" alt="">
+                                        <img src="assets/1_mass gainer_chocolate.png" alt="">
                                     </div>
                                     <div class="prod-name">
                                         The Mass Gainer
@@ -232,7 +232,7 @@
                             <a href="">
                                 <div class="product-item">
                                     <div class="prod-img">
-                                        <img src="Assets/1_whey_mocha.png" alt="">
+                                        <img src="assets/1_whey_mocha.png" alt="">
                                     </div>
                                     <div class="prod-name">
                                         The Whey
@@ -250,7 +250,7 @@
                             <a href="">
                                 <div class="product-item">
                                     <div class="prod-img">
-                                        <img src="Assets/1_isolate_chocolate.png" alt="">
+                                        <img src="assets/1_isolate_chocolate.png" alt="">
                                     </div>
                                     <div class="prod-name">
                                         The Isolate
