--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             </nav>
 
             <div class="header-banner">
-                <img src="assets/banner1.png" alt="">
+                <img src="assets/banner1.png" alt="" class="for-desktop">
+                <img src="assets/banner1-mob.png" alt="" class="for-mob">
             </div>
         </header>
 
@@ -151,10 +152,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="offset-md-6 col-md-6">
-                        <h1>THE WHEY</h1>
-                        <h4>YOUR GUTS DESERVE THE GOOD STUFF</h4>
-                        <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good! Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the building blocks you need to support new muscle growth, improved strength, and fast recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
-                        <a href="">Buy Now</a>
+                        <div class="banner-text">
+                            <h1>THE WHEY</h1>
+                            <h4>YOUR GUTS DESERVE THE GOOD STUFF</h4>
+                            <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good!
+                                Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the
+                                building blocks you need to support new muscle growth, improved strength, and fast
+                                recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and
+                                glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
+                            <a href="">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -164,10 +171,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h1>THE MASS GAINER</h1>
-                        <h4>FORMULTED FOR MASSIVE GAIN</h4>
-                        <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good! Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the building blocks you need to support new muscle growth, improved strength, and fast recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
-                        <a href="">Buy Now</a>
+                        <div class="banner-text">
+                            <h1>THE MASS GAINER</h1>
+                            <h4>FORMULTED FOR MASSIVE GAIN</h4>
+                            <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good!
+                                Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the
+                                building blocks you need to support new muscle growth, improved strength, and fast
+                                recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and
+                                glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
+                            <a href="">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -177,10 +190,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="offset-md-6 col-md-6">
-                        <h1>THE ISOLATE</h1>
-                        <h4>PREMIUM ISOLATE MASS BUILDER</h4>
-                        <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good! Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the building blocks you need to support new muscle growth, improved strength, and fast recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
-                        <a href="">Buy Now</a>
+                        <div class="banner-text">
+                            <h1>THE ISOLATE</h1>
+                            <h4>PREMIUM ISOLATE MASS BUILDER</h4>
+                            <p>The Whey is an ultra premium whey protein with flavoring that’s simply whey too good!
+                                Each scoop comes packed with 24 grams of delicious whey protein. And it delivers all the
+                                building blocks you need to support new muscle growth, improved strength, and fast
+                                recovery. Branched chain amino acids (BCAAs), essential amino acids (EAAs), and
+                                glutamine precursors. If your muscles need it, you’ll find it in The Whey.</p>
+                            <a href="">Buy Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
