--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             </nav>
 
             <div class="header-banner">
-                <img src="assets/banner1.png" alt="" class="for-desktop">
-                <img src="assets/banner1-mob.png" alt="" class="for-mob">
+                <!-- <img src="assets/banner1.png" alt="" class="for-desktop">
+                <img src="assets/banner1-mob.png" alt="" class="for-mob"> -->
             </div>
         </header>
 
