--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="fonts/TT Supermolot Neue/TT Supermolot Neue.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <div id="wrapper">
+    <div id="home">
 
         <header>
-            <div class="container">
+            <div class="container-xl">
                 <div class="logo-nav">
 
                     <div class="logo">
@@ -28,12 +26,12 @@
 
                     <nav>
                         <ul>
-                            <li>Home</li>
-                            <li>Whey</li>
-                            <li>Isolates</li>
-                            <li>BCAA</li>
-                            <li>Pre-Workout</li>
-                            <li>Contact Us</li>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/whey.html">Whey</a></li>
+                            <li><a href="">Isolates</a></li>
+                            <li><a href="">BCAA</a></li>
+                            <li><a href="">Pre-Workout</a></li>
+                            <li><a href="/contact.html">Contact Us</a></li>
                         </ul>
 
                         <div class="social-links">
@@ -105,11 +103,6 @@
                     </div>
                 </div>
             </nav>
-
-            <div class="header-banner">
-                <!-- <img src="assets/banner1.png" alt="" class="for-desktop">
-                <img src="assets/banner1-mob.png" alt="" class="for-mob"> -->
-            </div>
         </header>
 
 
