nav links correxted

--- a/contact.html
+++ b/contact.html
@@ -87,13 +87,12 @@
                                 <div class="row">
                                     <div class="col-md-6 order-1 m-auto">
                                         <ul class="nav-links">
-                                            <li>About US</li>
-                                            <li>Our Services</li>
-                                            <li>Consultation</li>
-                                            <li>VOIP Service</li>
-                                            <li>Poster</li>
-                                            <li>Help Desk</li>
-                                            <li>Contact Us</li>
+                                            <li><a href="/">Home</a></li>
+                                            <li><a href="whey.html">Whey</a></li>
+                                            <li><a href="">Isolate</a></li>
+                                            <li><a href="">BCAA</a></li>
+                                            <li><a href="">Pre Workout</a></li>
+                                            <li><a href="contact.html">Contact Us</a></li>
                                         </ul>
                                     </div>
                                 </div>
