--- a/whey.html
+++ b/whey.html
@@ -31,7 +31,7 @@
                                 <li><a href="">Isolates</a></li>
                                 <li><a href="">BCAA</a></li>
                                 <li><a href="">Pre-Workout</a></li>
-                                <li><a href="">Contact Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
 
                             <div class="social-links">
@@ -146,7 +146,7 @@
         <div class="whey-banner1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-6">
+                    <div class="col-md-8 col-lg-6 offset-md-4 offset-lg-6">
                         <div class="whey-banner1-text">
                             <h1>Best Partner With Fitness</h1>
                             <h3>GREAT TASTING MUSCLE-BUILDING WHEY!</h3>
@@ -189,7 +189,7 @@
         <div class="whey-banner3">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-6">
+                    <div class="col-md-8 col-lg-6 offset-md-4 offset-lg-6">
                         <div class="whey-banner3-text">
                             <h1>MADE IN USA</h1>
                             <p>When you’re choosing a protein powder, it’s important to choose one that you can trust
